--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,6 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-# Ignore migrations and media files
+# Ignore migrations and media files generated
 divulgacion/*/migrations/
 media/*
